# msi-fb

./: .gitignore  CMakeLists.txt  README.md  config.h  install.bat  install.ps1  main.cpp  pawnio_ec.cpp  pawnio_ec.h  release.ps1
assets/: app.rc
